# pyxamstore

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  unpack-store.py
pyxamstore/: __init__.py  constants.py  explorer.py
